@@ -1,1 +1,15 @@
+# aoc2023-java
+
+Advent of Code 2023 in Modern Java (WiP)
+
+## Build status
+
 [![Java CI with Maven](https://github.com/klaeufer/aoc2023-java/actions/workflows/maven.yml/badge.svg)](https://github.com/klaeufer/aoc2023-java/actions/workflows/maven.yml)
+
+## How to build and run
+
+```
+$ mvn package
+$ java -cp target/aoc2023-0.1-SNAPSHOT.jar --enable-preview Day5
+```
+
